--- a/stylesheets/main.src.css
+++ b/stylesheets/main.src.css
@@ -8,6 +8,7 @@
 :root {
   --c-release: #99c7f4;
   --c-background: #101010;
+  --wipe-length: 25%;
 }
 
 body {
@@ -27,7 +28,11 @@ body {
 }
 
 [data-page] {
-  @apply flex w-full h-full;
+  @apply flex items-center justify-center w-full h-full absolute top-0 left-0;
+}
+
+[data-page]:not([data-active]) {
+  display: none;
 }
 
 .links {
@@ -42,13 +47,39 @@ body {
   @apply text-white/50;
 }
 
-@keyframes scroll {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(-100%);
-  }
+@property --wipe-position {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 100%;
+}
+
+.wipe {
+  --wipe-position: 100%;
+  mask-image: linear-gradient(
+    to bottom right,
+    black var(--wipe-position),
+    transparent calc(var(--wipe-position) + var(--wipe-length)),
+    transparent
+  );
+
+  transition: --wipe-position 600ms cubic-bezier(0, 0.55, 0.45, 1);
+}
+
+.wipe-reverse {
+  --wipe-position: 100%;
+  mask-image: linear-gradient(
+    to top left,
+    black var(--wipe-position),
+    transparent calc(var(--wipe-position) + var(--wipe-length)),
+    transparent
+  );
+
+  transition: --wipe-position 600ms cubic-bezier(0, 0.55, 0.45, 1);
+}
+
+.wipe.wiped,
+.wipe-reverse.wiped {
+  --wipe-position: calc(-1 * var(--wipe-length));
 }
 
 ::selection {
