--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -578,8 +578,8 @@ video {
   position: relative;
 }
 
-.mt-4{
-  margin-top: 1rem;
+.mb-2{
+  margin-bottom: 0.5rem;
 }
 
 .block{
@@ -594,6 +594,10 @@ video {
   display: inline;
 }
 
+.flex{
+  display: flex;
+}
+
 .table{
   display: table;
 }
@@ -606,14 +610,6 @@ video {
   display: none;
 }
 
-.h-40{
-  height: 10rem;
-}
-
-.w-40{
-  width: 10rem;
-}
-
 .resize{
   resize: both;
 }
@@ -622,18 +618,30 @@ video {
   flex-direction: column;
 }
 
+.justify-center{
+  justify-content: center;
+}
+
+.gap-4{
+  gap: 1rem;
+}
+
+.break-all{
+  word-break: break-all;
+}
+
 .border{
   border-width: 1px;
 }
 
-.bg-red-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-6xl{
+  font-size: 3.75rem;
+  line-height: 1;
 }
 
 .text-8xl{
@@ -654,12 +662,12 @@ video {
   --c-release: #99c7f4;
   --c-background: #101010;
   --wipe-length: 25%;
+  --grid-width: 128px;
+  --grid-height: 50px;
 }
 
 body {
   --grid-color: #ffffff45;
-  --grid-width: 128px;
-  --grid-height: 50px;
   background: radial-gradient(circle, transparent, var(--c-background)),
     linear-gradient(to right, var(--grid-color) 2px, transparent 2px) 0 0 /
       var(--grid-width) var(--grid-height),
@@ -682,7 +690,14 @@ body {
   height: 100%;
   width: 100%;
   align-items: center;
-  justify-content: center;
+  overflow: auto;
+  padding: 3rem;
+}
+
+@media (min-width: 768px){
+  [data-page]{
+    padding: 6rem;
+  }
 }
 
 [data-page]:not([data-active]) {
@@ -691,22 +706,57 @@ body {
 
 .links{
   display: flex;
+  flex-direction: column;
+  align-items: center;
   gap: 1rem;
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+}
+
+@media (min-width: 768px){
+  .links{
+    flex-direction: row;
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
 
 .links > a{
   color: rgb(255 255 255 / 0.5);
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .links > a:hover{
+  --tw-skew-x: -6deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .links > span{
+  display: none;
   color: rgb(255 255 255 / 0.5);
+}
+
+@media (min-width: 768px){
+  .links > span{
+    display: block;
+  }
+}
+
+.experience{
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+
+.experience > i{
+  color: rgb(255 255 255 / 0.5);
+}
+
+.experience > ul {
+  -webkit-mask: linear-gradient(to bottom right, white 25%, rgba(255, 255, 255, 0.5));
+          mask: linear-gradient(to bottom right, white 25%, rgba(255, 255, 255, 0.5));
 }
 
 @property --wipe-position {
@@ -756,6 +806,36 @@ body {
   --wipe-position: calc(-1 * var(--wipe-length));
 }
 
+a[target="_blank"]{
+  text-decoration-line: underline;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+a[target="_blank"]:hover{
+  color: var(--c-release);
+}
+
+a[target="_blank"]::after {
+  content: " \2750";
+}
+
+ul{
+  margin-left: 1rem;
+  list-style-type: disc;
+}
+
+@media (min-width: 768px){
+  ul{
+    margin-left: 2rem;
+  }
+}
+
+li{
+  list-style-position: inside;
+}
+
 ::-moz-selection {
   color: red;
   background: yellow;
@@ -764,4 +844,16 @@ body {
 ::selection {
   color: red;
   background: yellow;
+}
+
+@media (min-width: 768px){
+  .md\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .md\:text-8xl{
+    font-size: 6rem;
+    line-height: 1;
+  }
 }
