--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -578,16 +578,21 @@ video {
   position: relative;
 }
 
-.m-auto{
-  margin: auto;
+.my-2{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .mb-2{
   margin-bottom: 0.5rem;
 }
 
-.mt-4{
-  margin-top: 1rem;
+.mt-2{
+  margin-top: 0.5rem;
+}
+
+.mt-1{
+  margin-top: 0.25rem;
 }
 
 .block{
@@ -667,6 +672,30 @@ video {
 .text-8xl{
   font-size: 6rem;
   line-height: 1;
+}
+
+.font-medium{
+  font-weight: 500;
+}
+
+.font-thin{
+  font-weight: 100;
+}
+
+.font-light{
+  font-weight: 300;
+}
+
+.font-normal{
+  font-weight: 400;
+}
+
+.text-white\/75{
+  color: rgb(255 255 255 / 0.75);
+}
+
+.text-white\/90{
+  color: rgb(255 255 255 / 0.9);
 }
 
 .outline{
@@ -779,8 +808,16 @@ body {
 }
 
 .experience > ul {
-  -webkit-mask: linear-gradient(to bottom right, white 25%, rgba(255, 255, 255, 0.5));
-          mask: linear-gradient(to bottom right, white 25%, rgba(255, 255, 255, 0.5));
+  -webkit-mask: linear-gradient(
+    to bottom right,
+    rgba(255, 255, 255, 0.75) 25%,
+    rgba(255, 255, 255, 0.5)
+  );
+          mask: linear-gradient(
+    to bottom right,
+    rgba(255, 255, 255, 0.75) 25%,
+    rgba(255, 255, 255, 0.5)
+  );
 }
 
 @property --wipe-position {
@@ -828,6 +865,16 @@ body {
 .wipe.wiped,
 .wipe-reverse.wiped {
   --wipe-position: calc(-1 * var(--wipe-length));
+}
+
+.mask-down {
+  -webkit-mask: linear-gradient(white, transparent);
+          mask: linear-gradient(white, transparent);
+}
+
+.mask-up {
+  -webkit-mask: linear-gradient(transparent, white);
+          mask: linear-gradient(transparent, white);
 }
 
 a[target="_blank"]{
