--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -674,6 +674,10 @@ video {
   color: rgb(255 255 255 / 0.9);
 }
 
+.\!no-underline{
+  text-decoration-line: none !important;
+}
+
 .outline{
   outline-style: solid;
 }
