--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -587,6 +587,10 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mb-4{
+  margin-bottom: 1rem;
+}
+
 .block{
   display: block;
 }
@@ -798,6 +802,53 @@ body {
     rgba(255, 255, 255, 0.75) 25%,
     rgba(255, 255, 255, 0.5)
   );
+}
+
+.icon-list{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 2rem;
+}
+
+.icon-list > div{
+  text-align: center;
+}
+
+.icon-list > div > img{
+  margin: auto;
+  height: 8rem;
+  width: 8rem;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  filter: drop-shadow(0 0 5rem rgb(255 255 255 / 0.5));
+}
+
+.icon-list > div > p{
+  opacity: 0.25;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+
+@media (min-width: 768px){
+  .icon-list > div > p{
+    --tw-translate-y: -0.5rem;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+}
+
+.icon-list > div:hover > p{
+  --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  opacity: 1;
+}
+
+.icon-list > div:hover > img {
+  filter: drop-shadow(0 0 2.5rem rgb(255 255 255 / 0.5));
 }
 
 @property --wipe-position {
