--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -587,10 +587,6 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.mb-4{
-  margin-bottom: 1rem;
-}
-
 .block{
   display: block;
 }
@@ -809,6 +805,12 @@ body {
   flex-wrap: wrap;
   justify-content: space-around;
   gap: 2rem;
+}
+
+@media (min-width: 768px){
+  .icon-list{
+    gap: 4rem;
+  }
 }
 
 .icon-list > div{
